Add font awesome icons

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Home - Ecommerce</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -113,6 +115,7 @@
         <div class="footer__column">
             <ul class="footer__social-media-container">
                 <li class="footer__social-media-item">
+                    <i class="fa-brands fa-facebook footer__contact-icon"></i>
                     <a href="#" class="footer__social-media-link">
                         <!-- Icono -->
                         Facebook
@@ -120,20 +123,20 @@
                 </li>
                 <li class="footer__social-media-item">
                     <a href="#" class="footer__social-media-link">
-                        <!-- Icono -->
+                        <i class="fa-brands fa-instagram footer__contact-icon"></i>
                         Instagram
                     </a>
                 </li>
                 <li class="footer__social-media-item">
                     <a href="#" class="footer__social-media-link">
-                        <!-- Icono -->
+                        <i class="fa-brands fa-linkedin footer__contact-icon"></i>
                         LinkedIn
                     </a>
                 </li>
             </ul>
         </div>
         <div class="footer__column">
-            <img src="#" alt="Company Logo" class="footer__logo">
+            <img src="/assets/images/logo.png" alt="Company Logo" class="footer__logo" width="50">
             <h1 class="footer__company-name">
                 NOMBRE DE LA EMPRESA
             </h1>
@@ -146,19 +149,19 @@
                 <!-- para cambiar varias palabras similares que tenemos de clase, le damos a ctrl+d -->
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- Icono -->
+                        <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
                         Telefono
                     </a>
                 </li>
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- Icono -->
+                        <i class="fa-solid fa-location-dot footer__contact-icon"></i>
                         Localizacion
                     </a>
                 </li>
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- Icono -->
+                        <i class="fa-solid fa-envelope footer__contact-icon"></i>
                         Email
                     </a>
                 </li>
