--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <header class="section-cards__header">
                 <div class="section-cards__title-container">
                     <h1 class="section-cards__title">
-                        Lorem ipsum dolor sit amet.
+                        TEMPORAL
                     </h1>
                     <p class="section-cards__subtitle">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cumque, obcaecati quas
